--- a/Admin/views/form.ejs
+++ b/Admin/views/form.ejs
@@ -22,10 +22,14 @@
             <label for="name">Full Name:</label>
             <input type="text" id="name" name="name" required>
         </div>
-        
-        <div class="form-group">
+          <div class="form-group">
             <label for="residenceHall">Residence Hall:</label>
             <input type="text" id="residenceHall" name="residenceHall" required>
+        </div>
+
+        <div class="form-group">
+            <label for="password">Password (Optional - will be randomly generated if not provided):</label>
+            <input type="password" id="password" name="password">
         </div>
         
         <button type="submit">Create User</button>
